# ROBERT-code

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment-petitradtrans-stable.yml  environment-picaso.yml  environment-stage9-petitradtrans.yml  environment-stage9-picaso-v4.yml  environment.yml  postprocess_forward.py  postprocess_retrieval.py  postprocess_wasp69b_sampler_benchmark.py  pyproject.toml  run_forward.py  run_oe_from_nested.py  run_retrieval.py  submit.sh
configurations/: README.md  TEMPLATE_all_supported_options.yaml  l98_59b_clr_transmission_multinest.yaml  picaso_jwst_transmission_retrieval_multinest.yaml  synthetic_six_molecule_cloudy_transmission_injection_recovery_multinest.yaml  synthetic_six_molecule_transmission_injection_recovery_multinest.yaml  synthetic_transmission_injection_recovery_multinest.yaml  wasp69b_clear_R1000.yaml  wasp69b_clear_native_isothermal_R1000.yaml  wasp69b_clear_native_pg14_R1000.yaml  wasp69b_clear_nircam_pg14_R1000.yaml  wasp69b_cloud_free_R1000.yaml  wasp69b_cloud_free_native_isothermal_R1000.yaml  wasp69b_cloud_free_native_pg14_R1000.yaml  wasp69b_cloud_free_native_pg14_R1000_multinest.yaml  wasp69b_cloud_free_native_pg14_R1000_optimal_estimation.yaml  wasp69b_cloud_free_native_pg14_R1000_optimal_estimation_to_multinest.yaml  wasp69b_cloud_free_native_pg14_R1000_optimal_estimation_to_ultranest.yaml  wasp69b_cloud_free_nircam_pg14_R1000.yaml  wasp69b_mie_catalog_layer_by_layer_R1000_optimal_estimation.yaml  wasp69b_mie_catalog_pg14_R1000.yaml  wasp69b_mie_catalog_pg14_R1000_multinest.yaml  wasp69b_mie_catalog_pg14_R1000_optimal_estimation.yaml  wasp69b_mie_catalog_pg14_R1000_optimal_estimation_to_multinest.yaml  wasp69b_mie_catalog_pg14_R1000_optimal_estimation_to_ultranest.yaml  wasp69b_mie_direct_nk_pg14_R1000.yaml  wasp80b_clear_native_isothermal_R1000.yaml  wasp80b_clear_native_pg14_R1000.yaml  wasp80b_clear_nircam_pg14_R1000.yaml  wasp80b_cloud_free_native_isothermal_R1000.yaml  wasp80b_cloud_free_native_pg14_R1000.yaml  wasp80b_cloud_free_nircam_pg14_R1000.yaml  wasp80b_mie_catalog_pg14_R1000.yaml  wasp80b_mie_direct_nk_pg14_R1000.yaml
docs/: configuration.md  data_policy.md  emission_intercomparison_environments.md  emission_intercomparison_roadmap.md  emission_intercomparison_version_2.md  leave_one_out.md  postprocessing.md  running_hat_p_32b_on_slurm.md  running_wasp_retrievals_on_cosma8.md  running_wasp_retrievals_on_dial3.md
examples/: BENCHMARKS.md  __init__.py  analyze_l98_59b_clr_retrieval.py  benchmark_atmosphere_build.py  benchmark_cloud_scattering_picaso_virga.py  benchmark_continuous_pt_cloud_reference.py  benchmark_continuous_transmission_reference.py  benchmark_emission_intercomparison_stage_4.py  benchmark_emission_intercomparison_stage_5.py  benchmark_emission_intercomparison_stage_6.py  benchmark_emission_intercomparison_stage_7.py  benchmark_emission_intercomparison_stages_1_3.py  benchmark_emission_intercomparison_v2_stage_1.py  (+120 more)
(+518 files in other folders)
