[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robert-exoplanets"
version = "0.3.0"
description = "Foundation for JWST exoplanet emission retrievals."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ROBERT contributors" }
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.7",
  "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robert_exoplanets = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
