[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "robert-exoplanets"
version = "0.3.0"
description = "Foundation for JWST exoplanet emission retrievals."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ROBERT contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy>=1.24"
]

[project.scripts]
robert-retrieval-status = "robert_exoplanets.retrieval.status:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "matplotlib>=3.7",
  "pytest>=7.4",
  "ruff>=0.11"
]
perf = [
  "numba>=0.61"
]
opacity = [
  "exo-k>=1.3.1"
]
chemistry = [
  "pyfastchem>=3.1.2,<3.2"
]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2"
]
retrieval = [
  "mpi4py>=4.1",
  "ultranest>=4.5"
]
complete = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "exo-k>=1.3.1",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.7",
  "mpi4py>=4.1",
  "numba>=0.61",
  "pyfastchem>=3.1.2,<3.2",
  "pytest>=7.4",
  "ruff>=0.11",
  "ultranest>=4.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robert_exoplanets = [
  "py.typed",
  "data/cia/*.tab",
  "data/cia/*.json",
  "data/cia/*.txt"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["robert_exoplanets"]

[tool.coverage.report]
fail_under = 70
show_missing = true
